@@ -20,20 +20,20 @@ PLUMED=PLUMED-latest
 PLUMED_URL=http://qe-forge.org/frs/download.php/134/$(PLUMED).tar.gz
 #
 LD1=atomic-5.0
-LD1_URL=http://qe-forge.org/frs/download.php/.../$(LD1).tar.gz
+LD1_URL=http://qe-forge.org/frs/download.php/201/$(LD1).tar.gz
 #
 XSPECTRA=xspectra-5.0
-XSPECTRA_URL=http://qe-forge.org/frs/download.php/.../$(XSPECTRA).tar.gz
+XSPECTRA_URL=http://qe-forge.org/frs/download.php/204/$(XSPECTRA).tar.gz
 #
 PWCOND=pwcond-5.0
-PWCOND_URL=http://qe-forge.org/frs/download.php/.../$(PWCOND).tar.gz
+PWCOND_URL=http://qe-forge.org/frs/download.php/205/$(PWCOND).tar.gz
 #
 NEB=neb-5.0
-NEB_URL=http://qe-forge.org/frs/download.php/.../$(NEB).tar.gz
+NEB_URL=http://qe-forge.org/frs/download.php/202/$(NEB).tar.gz
 #
 PHONON=PHonon-5.0
-PHONON_URL=http://qe-forge.org/frs/download.php/.../$(PHONON).tar.gz
+PHONON_URL=http://qe-forge.org/frs/download.php/203/$(PHONON).tar.gz
 #
 TDDFPT=tddfpt-5.0
-TDDFPT_URL=http://qe-forge.org/frs/download.php/.../$(TDDFPT).tar.gz
+TDDFPT_URL=http://qe-forge.org/frs/download.php/206/$(TDDFPT).tar.gz
 #
